2010-05-10  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (LIBS_SYSTEM): Set using configure, not cpp.
	(LIBS_SYSTEM) [MSDOS]: Reset with MSDOS_LIBS_SYSTEM.
	(LIBES): Use LIBS_SYSTEM as a variable.
	* s/msdos.h (LIBS_SYSTEM): Rename to MSDOS_LIBS_SYSTEM.  Always define.
	* s/aix4-2.h (LIBS_SYSTEM):
	* s/freebsd.h (LIBS_SYSTEM):
	* s/hpux10-20.h (LIBS_SYSTEM):
	* s/sol2-6.h (LIBS_SYSTEM):
	* s/unixware.h (LIBS_SYSTEM):
	Move to configure.

	* s/aix4-2.h (MAIL_USE_LOCKF):
	* s/bsd-common.h (MAIL_USE_FLOCK):
	* s/darwin.h (MAIL_USE_FLOCK):
	* s/gnu-linux.h (MAIL_USE_FLOCK):
	* s/irix6-5.h (MAIL_USE_FLOCK):
	* s/template.h (MAIL_USE_FLOCK):
	Move to configure.

2010-05-08  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.2 released.

2010-05-08  Andreas Schwab  <schwab@linux-m68k.org>

	* composite.c (autocmp_chars): Save point as marker before calling
	auto-composition-function (Bug#5984).

	* lisp.h (restore_point_unwind): Add prototype.

	* fileio.c (restore_point_unwind): Remove static attribute.

2010-05-08  Kenichi Handa  <handa@m17n.org>

	* ftfont.c (M17N_FLT_USE_NEW_FEATURE): Define it if we can use the
	new feature of libotf and m17n-flt.
	(ftfont_check_otf) [M17N_FLT_USE_NEW_FEATURE]:
	Call OTF_check_features even if no specific feature is given.
	(PACK_OTF_TAG) [M17N_FLT_USE_NEW_FEATURE]: New macro.
	(ftfont_drive_otf) [M17N_FLT_USE_NEW_FEATURE]: Handle the case
	that OUT is NULL.  Use OTF_drive_gsub_with_log and
	OTF_drive_gpos_with_log instead of OTF_drive_gsub and
	OTF_drive_gpos.
	(ftfont_try_otf) [M17N_FLT_USE_NEW_FEATURE]: New function.
	(ftfont_shape_by_flt) [M17N_FLT_USE_NEW_FEATURE]:
	Setup mflt_enable_new_feature and mflt_try_otf.

2010-05-08  Jan Djärv  <jan.h.d@swipnet.se>

	* xsettings.c (Ftool_bar_get_system_style): Correct comment.

	* gtkutil.c (xg_pack_tool_bar): Change show_all to show for handle
	box and toolbar (Bug #6139).
	(xg_create_tool_bar): Remove comment (Bug #6139).
	(xg_make_tool_item): Remove gtk_widget_show_all (Bug #6139).